apps/ms-users-camel/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/version: latest
    app.kubernetes.io/name: mongodb-front
  name: mongodb-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: latest
      app.kubernetes.io/name: mongodb-front
  template:
    metadata:
      labels:
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/version: latest
        app.kubernetes.io/name: mongodb-front
    spec:
      containers:
        - env:
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
          image: quay.io/ryanezil/mongodb-front:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: mongodb-front
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/version: latest
    app.kubernetes.io/name: mongodb-front
  name: mongodb-front
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: mongodb-front
    app.kubernetes.io/version: latest
  type: ClusterIP

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/version: latest
    app.kubernetes.io/name: mongodb-front
  name: mongodb-front
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: mongodb-front
